initial working build

--- a/HPL2/core/CMakeLists.txt
+++ b/HPL2/core/CMakeLists.txt
@@ -151,7 +151,7 @@ file(GLOB impl_sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     sources/impl/MeshLoaderColladaHelpers.cpp
     sources/impl/MeshLoaderColladaLoader.cpp
     sources/impl/MeshLoaderMSH.cpp
-    sources/impl/MeshLoaderFBX.cpp
+    #sources/impl/MeshLoaderFBX.cpp
 )
 
 IF(APPLE)
@@ -239,7 +239,7 @@ source_group("Platform" REGULAR_EXPRESSION "\\/impl\\/Platform.+")
 
 FindPrebuiltLibrary(NEWTON_LIBRARY Newton)
 FindPrebuiltLibrary(ANGELSCRIPT_LIBRARY angelscript)
-FindPrebuiltLibrary(FBX_LIBRARY fbxsdk-2012.2-static)
+#FindPrebuiltLibrary(FBX_LIBRARY fbxsdk-2012.2-static)
 FindPrebuiltLibrary(GLEW_LIBRARY GLEW)
 FindPrebuiltLibrary(THEORA_LIBRARY theora)
 FindPrebuiltLibrary(DEVIL_LIBRARY IL)
@@ -289,8 +289,9 @@ target_link_libraries(HPL2
     ${THEORA_LIBRARY}
     ${DEVIL_LIBRARY}
     z
-    ${FBX_LIBRARY}
+    #${FBX_LIBRARY}
     ${PLATFORM_LIBS}
+    GL
 )
 
 
@@ -344,7 +345,7 @@ FUNCTION(AddTestTarget target_name)
     )
 ENDFUNCTION()
 
-add_subdirectory(../tests tests)
+#add_subdirectory(../tests tests)
 add_subdirectory(../tools tools)
 
 
