--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+amnesia/src/build
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -348,3 +349,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# vim ctags
+HPL2/core/tags
+
+# dependencies
+HPL2/dependencies
